# itzzjb_dockai

./: .dockai  .dockai.example  .dockerignore  .env.example  .gitignore  Dockerfile  PYTEST_SETUP.md  README.md  RELEASES.md  RELEASE_NOTES_v1.1.0.md  action.yml  analyzer.py  generator.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  run_tests_script.py  scanner.py
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
docs/: Gemfile  README.md  _config.yml  api-reference.md  architecture.md  configuration.md  customization.md  faq.md  getting-started.md  github-actions.md  index.md  llm-providers.md  mcp-integration.md  mcp-server.md  platform-integration.md  releases.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
examples/node-app/: Dockerfile  README.md  package-lock.json  package.json  server.js
src/dockai/: __init__.py  agent.py  analyzer.py  callbacks.py  error_parser.py  errors.py  generator.py  graph.py  health_checker.py  main.py  nodes.py  registry.py  reviewer.py  scanner.py  schemas.py  state.py  ui.py  validator.py
src/dockai/agents/: __init__.py  agent_functions.py  analyzer.py  generator.py  reviewer.py
src/dockai/cli/: __init__.py  main.py
tests/: __init__.py  test_agent.py  test_analyzer.py  test_callbacks.py  test_code_intelligence.py  test_error_parser.py  test_errors.py  test_generator.py  test_graph.py  test_health_checker.py  test_indexer.py  test_langsmith.py  test_llm_providers.py  test_mcp_server.py  test_prompts.py  test_rate_limiter.py  test_registry.py  test_registry_ghcr.py  test_reviewer.py  test_runtime_config.py  test_scanner.py  test_schemas.py  test_state.py  test_validator.py
tests/node_app_test/: index.js  package.json
tests/test_app/: Dockerfile  app.py
(+17 files in other folders)
