[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dockai-cli"
version = "0.1.3"
description = "A Two-Stage LLM Pipeline for generating optimized Dockerfiles"
readme = "README.md"
authors = [
  { name = "Januda Bethmin", email = "desilvabethmin@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.11.0",
    "tenacity>=8.2.0",
]

[project.scripts]
dockai-cli = "dockai.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
