[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dockai-cli"
version = "2.0.0"
description = "The Universal AI DevOps Architect for Dockerizing Applications"
readme = "README.md"
authors = [
  { name = "Januda Bethmin", email = "desilvabethmin@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.11.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

[project.scripts]
dockai = "dockai.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
